name:                persistent-postgis
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       aeson >=1.2.4 && <1.3
                     , base >=4.9.0 && <4.10
                     , bytestring >=0.10.8 && <0.11
                     , http-api-data >=0.3.7 && <0.4
                     , persistent >=2.7.0 && <2.8
                     , text >=1.2.3 && <1.3
  exposed-modules:     Database.Persist.Postgis.Geography
                     , Database.Persist.Postgis.Geography.Geography
                     , Database.Persist.Postgis.Geography.GeographyBase
                     , Database.Persist.Postgis.Geography.GeometryCollection
                     , Database.Persist.Postgis.Geography.LineString
                     , Database.Persist.Postgis.Geography.MultiLineString
                     , Database.Persist.Postgis.Geography.MultiPoint
                     , Database.Persist.Postgis.Geography.MultiPolygon
                     , Database.Persist.Postgis.Geography.Point
                     , Database.Persist.Postgis.Geography.Polygon
