name:                persistent-postgis
version:             1.2.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall -Wno-orphans
  default-language:    Haskell2010
  build-depends:       aeson >=1.3.1 && <1.6
                     , base >=4.9.0 && <4.15
                     , bytestring >=0.10.8 && <0.12
                     , geos >=0.2.2 && <0.5
                     , http-api-data >=0.3.7 && <0.5
                     , persistent >=2.8.2 && <2.12
                     , text >=1.2.3 && <1.3
  exposed-modules:     Data.Geometry.Geos.Instances
                     , Database.Persist.Postgis.Geography
